# replit-docs-qa-with-llamaindex

./: .replit  README.md  agent_constructor.py  custom_retriever.py  docs_loader.py  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
data/docs/: bounties_bounty-hunting_summary.pkl  bounties_posting-a-bounty_summary.pkl  category_bounties_summary.pkl  category_cycles_summary.pkl  category_databases_summary.pkl  category_deployments_summary.pkl  category_getting-started_summary.pkl  category_hosting_summary.pkl  category_kaboomjs_summary.pkl  category_legal-and-security-info_summary.pkl  category_miscellanious_summary.pkl  category_mobile-app_summary.pkl  category_models_summary.pkl  category_organizations_summary.pkl  category_python_summary.pkl  category_replit--nix_summary.pkl  category_replit-ai_summary.pkl  category_replit-books_summary.pkl  category_teaching-curriculum_summary.pkl  category_the-replit-workspace_summary.pkl  category_using-git-on-replit_summary.pkl  category_web3_summary.pkl  cycles_about-cycles_summary.pkl  docs.replit_index_summary.pkl  docs.replit_updates_summary.pkl  getting-started_clui-graphical-cli_summary.pkl  getting-started_desktop-app_summary.pkl  getting-started_faq_summary.pkl  getting-started_firewalled-replit_summary.pkl  getting-started_intro-replit_summary.pkl  getting-started_key-terms_summary.pkl  getting-started_replit-mobile-app_summary.pkl  kaboom_build-tictactoe-with-websockets-kaboom_summary.pkl  model-farm_index_summary.pkl  (+43 more)
docs.replit.com/: extensions.html  index.html  updates.html
(+1856 files in other folders)
