[tool.poetry]
name = "docs-qa"
version = "0.1.0"
description = ""
authors = ["Matt <mattppalmer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
openai = "1.2.3"
streamlit = "1.29.0"
llama-index = "0.9.27"
llama-hub = "0.0.67"
replit = "3.5.0"
unstructured = "0.10.30"
cohere = "4.40"
langchain ="0.0.334"
nest-asyncio = "1.5.8"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
line-length = 150

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"